--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -258,15 +258,15 @@
 .contest__wrapper {
   width: 280px;
   margin: 0 auto;
-}
 
-.contest__title {
-  margin: 0;
-  font-style: normal;
-  font-weight: 300;
-  font-size: 24px;
-  line-height: 33px;
-  text-align: center;
+  .contest__title {
+    margin: 0;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 33px;
+    text-align: center;
+  }
 }
 
 .contest__wrapper {
@@ -287,6 +287,37 @@
     padding-bottom: 104px;
 
     .contest__title {
+      font-size: 50px;
+      line-height: 68px;
+    }
+  }
+}
+
+// Catalog
+
+.photos__wrapper {
+  width: 280px;
+  margin: 0 auto;
+  padding-top: 36px;
+  padding-bottom: 84px;
+
+  .photos__title {
+    margin: 0;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 33px;
+    text-align: center;
+  }
+}
+
+.photos__wrapper {
+  @media (min-width: @tablet-width) {
+    width: 616px;
+    padding-top: 81px;
+    padding-bottom: 143px;
+
+    .photos__title {
       font-size: 50px;
       line-height: 68px;
     }
