--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -50,20 +50,31 @@
 .page-header__logo {
   height: 23px;
   padding-left: 20px;
+  padding-top: 22px;
+  padding-bottom: 21px;
   text-decoration: none;
+
+  .header-logo {
+    display: none;
+  }
+
+  .page-header__logo-image {
+    padding-left: 10px;
+  }
 
   @media (min-width: @tablet-width) {
     height: 40px;
+    padding-top: 27px;
+    padding-bottom: 43px;
+
+    .header-logo {
+      display: inline-block;
+    }
   }
 
   @media (min-width: @desktop-width) {
     height: 40px;
-    margin-top: 27px;
   }
-}
-
-.page-header__logo-image {
-  padding-left: 10px;
 }
 
 .page-header__logo:hover path {
@@ -256,8 +267,12 @@
 // Forms
 
 .contest__wrapper {
+  display: flex;
+  flex-wrap: wrap;
   width: 280px;
   margin: 0 auto;
+  padding-top: 36px;
+  padding-bottom: 51px;
 
   .contest__title {
     margin: 0;
@@ -296,6 +311,8 @@
 // Catalog
 
 .photos__wrapper {
+  display: flex;
+  flex-wrap: wrap;
   width: 280px;
   margin: 0 auto;
   padding-top: 36px;
@@ -316,6 +333,17 @@
     width: 616px;
     padding-top: 81px;
     padding-bottom: 143px;
+
+    .photos__title {
+      font-size: 50px;
+      line-height: 68px;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 936px;
+    padding-top: 74px;
+    padding-bottom: 104px;
 
     .photos__title {
       font-size: 50px;
