--- a/source/less/blocks/contest__forms.less
+++ b/source/less/blocks/contest__forms.less
@@ -31,14 +31,7 @@
   }
 
   span{
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
+    display: none;
   }
 }
 
@@ -54,10 +47,7 @@
     }
 
     span {
-      clip: auto;
-      width: auto;
-      height: auto;
-      margin: 0;
+      display: inline-block;
     }
   }
 }
