--- a/source/less/blocks/photos__gallery.less
+++ b/source/less/blocks/photos__gallery.less
@@ -189,3 +189,110 @@
 .user__photos {
   margin-bottom: 20px;
 }
+
+// Photos__wrapper
+
+.photos__wrapper {
+  width: 280px;
+  margin: 0 auto;
+
+  .user__photos {
+    width: inherit;
+  }
+
+  .photos__comment {
+    background-color: @verylightgray;
+    color: @verydarkdesaturatedblue;
+    line-height: 24px;
+  }
+
+  .comment__author-name {
+    margin: 0;
+    padding-top: 26px;
+    padding-bottom: 5px;
+    font-weight: 300;
+    font-size: 12px;
+    text-transform: uppercase;
+  }
+
+  b {
+    padding-left: 15px;
+    padding-right: 5px;
+    font-weight: bold;
+    font-size: 14px;
+  }
+
+  .comment__text {
+    margin: 0;
+    padding-left: 15px;
+    font-weight: 400;
+    font-size: 14px;
+  }
+
+  .comment__like {
+    padding-left: 15px;
+    padding-bottom: 26px;
+    text-transform: uppercase;
+    color: @strongpink;
+
+    b {
+      padding-left: 15px;
+      font-weight: 400;
+      font-size: 12px;
+    }
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .photos__wrapper {
+   width: 620px;
+
+   .photos__comment {
+     display: grid;
+     grid-template-columns: 1fr 1fr;
+     padding-left: 15px;
+     padding-bottom: 32px;
+
+     .comment__text {
+        grid-column-start: 1;
+        grid-column-end: 3;
+     }
+
+     .conversely-comment__like {
+        grid-column-start: 2;
+        grid-column-end: 3;
+        grid-row-start: 1;
+        grid-row-end: 2;
+        justify-self: right;
+      }
+
+      .comment__like {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        padding-bottom: 0;
+
+        img {
+          grid-column-start: 2;
+          grid-column-end: 3;
+          padding-top: 5px;
+          padding-left: 7px;
+        }
+
+        b {
+          grid-column-start: 1;
+          grid-column-end: 2;
+          grid-row-start: 1;
+          grid-row-end: 2;
+          padding-left: 0;
+          padding-right: 5px;
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .photos__wrapper {
+   width: 940px;
+  }
+}
