--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -310,7 +310,7 @@
 
 // Catalog
 
-.photos__wrapper {
+.photos__wrapper-title {
   display: flex;
   flex-wrap: wrap;
   width: 280px;
@@ -328,7 +328,7 @@
   }
 }
 
-.photos__wrapper {
+.photos__wrapper-title {
   @media (min-width: @tablet-width) {
     width: 616px;
     padding-top: 81px;
