--- a/source/less/blocks/photos__gallery.less
+++ b/source/less/blocks/photos__gallery.less
@@ -195,9 +195,10 @@
 .photos__wrapper {
   width: 280px;
   margin: 0 auto;
+  padding-bottom: 15px;
 
   .user__photos {
-    width: inherit;
+    width: 280px;
   }
 
   .photos__comment {
@@ -245,25 +246,50 @@
 
 @media (min-width: @tablet-width) {
   .photos__wrapper {
+   display: grid;
+   grid-template-columns: 1fr 1fr;
+   gap: 20px;
    width: 620px;
+   padding-bottom: 40px;
+
+   .user__photos {
+     width: 300px;
+     margin: 0;
+    }
 
    .photos__comment {
      display: grid;
      grid-template-columns: 1fr 1fr;
-     padding-left: 15px;
-     padding-bottom: 32px;
+     width: 300px;
+
+     .comment__author-name {
+      grid-column-start: 1;
+      grid-column-end: 3;
+      padding-left: 30px;
+      padding-right: 37px;
+
+      b {
+        padding-left: 0;
+      }
+     }
 
      .comment__text {
         grid-column-start: 1;
         grid-column-end: 3;
+        padding-left: 30px;
+        padding-right: 38px;
      }
 
      .conversely-comment__like {
-        grid-column-start: 2;
+        grid-column-start: 1;
         grid-column-end: 3;
-        grid-row-start: 1;
-        grid-row-end: 2;
-        justify-self: right;
+        grid-row-start: 3;
+        grid-row-end: 4;
+        padding-left: 15px;
+      }
+
+      .conversely-like {
+        padding-top: 25px;
       }
 
       .comment__like {
@@ -275,7 +301,8 @@
           grid-column-start: 2;
           grid-column-end: 3;
           padding-top: 5px;
-          padding-left: 7px;
+          padding-left: 30px;
+          justify-self: center;
         }
 
         b {
@@ -294,5 +321,39 @@
 @media (min-width: @desktop-width) {
   .photos__wrapper {
    width: 940px;
+   grid-template-columns: 1fr 1fr 1fr;
+   padding-top: 50px;
+   padding-bottom: 34px;
+  }
+}
+
+// User__circulation
+
+.user__circulation {
+  width: 280px;
+  margin: 0 auto;
+
+  .photos__text {
+    font-size: 14px;
+    line-height: 30px;
+    text-align: center;
+    padding-bottom: 34px;
+  }
+
+  @media (min-width: @tablet-width) {
+    width: 620px;
+
+    .photos__text {
+      font-size: 18px;
+      padding-bottom: 60px;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 940px;
+
+    .photos__text {
+      padding-bottom: 57px;
+    }
   }
 }
