Исправил отступ и центрировал заголовок в каталоге

--- a/source/less/blocks/photos__gallery.less
+++ b/source/less/blocks/photos__gallery.less
@@ -135,6 +135,7 @@
 @media (min-width: @tablet-width) {
   .big-photos__wrapper {
    width: 620px;
+   margin-bottom: 50px;
 
    .photos__comment {
      display: grid;
@@ -322,7 +323,6 @@
   .photos__wrapper {
    width: 940px;
    grid-template-columns: 1fr 1fr 1fr;
-   padding-top: 50px;
    padding-bottom: 34px;
   }
 }
