--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -344,6 +344,7 @@
     width: 936px;
     padding-top: 74px;
     padding-bottom: 104px;
+    justify-content: center;
 
     .photos__title {
       font-size: 50px;
