--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,8 +1,43 @@
 .main-nav {
+  position: relative;
   outline: 3px solid rgba(255, 0, 0, 0.8);
   outline-offset: -3px;
+  background-color: @verydarkdesaturatedblue;
+  box-shadow: 0px 1px 0px #000000;
 }
 
+.main-nav__toogle {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 2;
+  display: block;
+  width: 23px;
+  height: 23px;
+  cursor: pointer;
+  border: none;
+  background-color: @verydarkdesaturatedblue;
+}
+
+.main-nav--closed .main-nav__toogle::before {
+  content: "";
+  position: absolute;
+  top: 20px;
+  left: -20px;
+  width: 50px;
+  height: 2px;
+  background-color: @white;
+  box-shadow:
+    0 8px 0 0 @white,
+    0 16px 0 0 @white;
+}
+
+.main-nav--closed .main-nav__toogle:active::before {
+  background-color: @white;
+  box-shadow:
+    0 8px 0 0 @white,
+    0 16px 0 0 @white;
+}
 
 .main-nav__list {
   margin: 0;
