--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -97,12 +97,14 @@
   outline-offset: -5px;
 
   @media (min-width: @tablet-width) {
+   height: 620px;
    background:
-   url(../../img/gallery/header/tablet/screen.jpg) no-repeat 82.5% 85px,
-   url(../../img/gallery/header/tablet/phone.png) no-repeat 50% 30px;
+   url(../../img/gallery/header/tablet/screen.jpg) no-repeat 82.8% 125px,
+   url(../../img/gallery/header/tablet/phone.png) no-repeat 50% 70px;
   }
 
   @media (min-width: @desktop-width) {
+    height: 743px;
     background:
     url(../../img/gallery/header/desktop/screen.jpg) no-repeat 77.2% 190px,
     url(../../img/gallery/header/desktop/phone.png) no-repeat 20% 125px;
@@ -148,7 +150,7 @@
     }
 
     .main__list {
-      margin-bottom: 42px;
+      margin-bottom: 41px;
     }
   }
 }
@@ -156,8 +158,7 @@
 .title__wrapper {
   width: 280px;
   margin: 0 auto;
-  outline: 4px solid rgba(29, 238, 210, 0.842);
-  outline-offset: -4px;
+
   .title {
     font-weight: 300;
     font-size: 24px;
@@ -183,6 +184,7 @@
 @media (min-width: @desktop-width) {
   .title__wrapper {
     width: 300px;
+    padding-top: 114px;
 
     .title {
       font-size: 50px;
@@ -194,8 +196,6 @@
 .main-list__wrapper {
   width: 280px;
   margin: 0 auto;
-  outline: 4px solid rgba(231, 9, 65, 0.959);
-  outline-offset: -4px;
 
   @media (min-width: @tablet-width) {
     width: 300px;
@@ -203,12 +203,13 @@
 
     .header-download__text {
       font-size: 18px;
+      padding-bottom: 90px;
     }
   }
 
   @media (min-width: @desktop-width) {
     .header-download__text {
-      padding-bottom: 130px;
+      padding-bottom: 100px;
     }
   }
 }
