--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,43 +1,107 @@
 .main-nav {
   position: relative;
+  width: auto;
   outline: 3px solid rgba(255, 0, 0, 0.8);
   outline-offset: -3px;
   background-color: @verydarkdesaturatedblue;
   box-shadow: 0px 1px 0px #000000;
+
+  @media (min-width: @desktop-width) {
+    background-color: inherit;
+  }
 }
 
-.main-nav__toogle {
+.main-nav--closed .main-nav__toogle {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 20px;
+  right: 10px;
   z-index: 2;
   display: block;
-  width: 23px;
-  height: 23px;
+  width: 50px;
+  height: 24px;
   cursor: pointer;
   border: none;
   background-color: @verydarkdesaturatedblue;
+  outline: 3px solid rgba(136, 255, 0, 0.932);
+  outline-offset: -3px;
+
+  @media (min-width: @desktop-width) {
+    display: none;
+  }
 }
 
 .main-nav--closed .main-nav__toogle::before {
   content: "";
   position: absolute;
-  top: 20px;
-  left: -20px;
+  top: 0;
+  left: 0;
   width: 50px;
   height: 2px;
   background-color: @white;
   box-shadow:
-    0 8px 0 0 @white,
-    0 16px 0 0 @white;
+  0 8px 0 0 @white,
+  0 16px 0 0 @white;
 }
 
 .main-nav--closed .main-nav__toogle:active::before {
   background-color: @white;
   box-shadow:
-    0 8px 0 0 @white,
-    0 16px 0 0 @white;
+  0 8px 0 0 @white,
+  0 16px 0 0 @white;
 }
+
+.main-nav--opened .main-nav__toggle {
+  top: 20px;
+  left: auto;
+  right: 10px;
+  width: 24px;
+  height: 24px;
+  outline: 3px solid rgba(247, 4, 4, 0.932);
+  outline-offset: -3px;
+
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    top: 24px;
+    left: 18px;
+    width: 36px;
+    height: 2px;
+    background-color: @white;
+  }
+
+  &::before {
+    transform: rotate(45deg);
+    box-shadow: none;
+  }
+
+  &::after {
+    transform: rotate(-45deg);
+  }
+}
+/*.main-nav--opened .main-nav__toggle::after,
+.main-nav--opened .main-nav__toggle::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 36px;
+  height: 2px;
+  background-color: #ffffff;
+}
+
+.main-nav--opened .main-nav__toggle::before {
+  transform: rotate(45deg);
+  box-shadow: none;
+}
+
+.main-nav--opened .main-nav__toggle::after {
+  transform: rotate(-45deg);
+}*/
+
+
+
+
 
 .main-nav__list {
   margin: 0;
