Добавил картинки и сделал таблицу для планшета и десктопа

--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -177,8 +177,10 @@
       grid-template-columns: 1fr 1fr;
       width: 620px;
       margin: 0 auto;
-      outline: 3px solid rgba(133, 202, 179, 0.945);
-      outline-offset: -3px;
+      background:
+      url(../../img/timer/24.png) no-repeat 13% 140px,
+      url(../../img/timer/diagram-fill.png) no-repeat 4.6% 75px,
+      url(../../img/timer/timer.png) no-repeat 0.5% 20px;
     }
 
     .research-title__wrapper {
@@ -221,6 +223,10 @@
     .research__wrapper {
       grid-template-columns: 1fr max-content;
       width: 940px;
+      background:
+      url(../../img/timer-desktop/24.png) no-repeat 11% 180px,
+      url(../../img/timer-desktop/diagram-fill.png) no-repeat 3.7% 100px,
+      url(../../img/timer-desktop/timer.png) no-repeat 0.5% 30px;
     }
 
     .research-title__wrapper {
