--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -11,7 +11,7 @@
   }
 }
 
-.main-nav--closed .main-nav__toogle {
+.main-nav--opened .main-nav__toogle {
   position: absolute;
   top: 20px;
   right: 10px;
@@ -30,7 +30,7 @@
   }
 }
 
-.main-nav--closed .main-nav__toogle::before {
+.main-nav--opened .main-nav__toogle::before {
   content: "";
   position: absolute;
   top: 0;
@@ -43,44 +43,15 @@
   0 16px 0 0 @white;
 }
 
-.main-nav--closed .main-nav__toogle:active::before {
+.main-nav--opened .main-nav__toogle:active::before {
   background-color: @white;
   box-shadow:
   0 8px 0 0 @white,
   0 16px 0 0 @white;
 }
 
-.main-nav--opened .main-nav__toggle {
-  top: 20px;
-  left: auto;
-  right: 10px;
-  width: 24px;
-  height: 24px;
-  outline: 3px solid rgba(247, 4, 4, 0.932);
-  outline-offset: -3px;
-
-  &::before,
-  &::after {
-    content: "";
-    position: absolute;
-    top: 24px;
-    left: 18px;
-    width: 36px;
-    height: 2px;
-    background-color: @white;
-  }
-
-  &::before {
-    transform: rotate(45deg);
-    box-shadow: none;
-  }
-
-  &::after {
-    transform: rotate(-45deg);
-  }
-}
-/*.main-nav--opened .main-nav__toggle::after,
-.main-nav--opened .main-nav__toggle::before {
+.main-nav--closed .main-nav__toggle::after,
+.main-nav--closed .main-nav__toggle::before {
   content: "";
   position: absolute;
   top: 0;
@@ -90,18 +61,14 @@
   background-color: #ffffff;
 }
 
-.main-nav--opened .main-nav__toggle::before {
+.main-nav--closed .main-nav__toggle::before {
   transform: rotate(45deg);
   box-shadow: none;
 }
 
-.main-nav--opened .main-nav__toggle::after {
+.main-nav--closed .main-nav__toggle::after {
   transform: rotate(-45deg);
-}*/
-
-
-
-
+}
 
 .main-nav__list {
   margin: 0;
