--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -11,7 +11,7 @@
   }
 }
 
-.main-nav--opened .main-nav__toogle {
+.main-nav__toogle {
   position: absolute;
   top: 20px;
   right: 10px;
@@ -22,15 +22,13 @@
   cursor: pointer;
   border: none;
   background-color: @verydarkdesaturatedblue;
-  outline: 3px solid rgba(136, 255, 0, 0.932);
-  outline-offset: -3px;
 
   @media (min-width: @desktop-width) {
     display: none;
   }
 }
 
-.main-nav--opened .main-nav__toogle::before {
+.main-nav--closed .main-nav__toogle::before {
   content: "";
   position: absolute;
   top: 0;
@@ -43,31 +41,56 @@
   0 16px 0 0 @white;
 }
 
-.main-nav--opened .main-nav__toogle:active::before {
-  background-color: @white;
+.main-nav--closed .main-nav__toogle:hover::before {
+  background-color: @strongpink;
   box-shadow:
-  0 8px 0 0 @white,
-  0 16px 0 0 @white;
+  0 8px 0 0 @strongpink,
+  0 16px 0 0 @strongpink;
 }
 
-.main-nav--closed .main-nav__toggle::after,
-.main-nav--closed .main-nav__toggle::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 36px;
-  height: 2px;
-  background-color: #ffffff;
+.main-nav--closed .main-nav__toogle:focus::before,
+.main-nav--closed .main-nav__toogle:active::before {
+  background-color: fade(@strongpink, 30%);
+  box-shadow:
+  0 8px 0 0 fade(@strongpink, 30%),
+  0 16px 0 0 fade(@strongpink, 30%);
 }
 
-.main-nav--closed .main-nav__toggle::before {
-  transform: rotate(45deg);
-  box-shadow: none;
-}
+.main-nav--opened .main-nav__toogle {
+  top: 20px;
+  right: 10px;
 
-.main-nav--closed .main-nav__toggle::after {
-  transform: rotate(-45deg);
+  &::after,
+  &::before {
+   content: "";
+   position: absolute;
+   top: 10px;
+   left: 15px;
+   width: 23px;
+   height: 2px;
+   background-color: #ffffff;
+  }
+
+  &::before {
+   transform: rotate(45deg);
+   box-shadow: none;
+  }
+
+  &::after {
+   transform: rotate(-45deg);
+  }
+
+  &:hover::before,
+  &:hover::after {
+    background-color: @strongpink;
+  }
+
+  &:focus::before,
+  &:focus::after,
+  &:active::before,
+  &:active::after {
+    background-color: fade(@strongpink, 30%);
+  }
 }
 
 .main-nav__list {
