--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,10 +1,12 @@
 .main-nav {
   position: relative;
   width: auto;
-  outline: 3px solid rgba(255, 0, 0, 0.8);
-  outline-offset: -3px;
   background-color: @verydarkdesaturatedblue;
   box-shadow: 0px 1px 0px #000000;
+
+  @media (min-width: @tablet-width) {
+    height: 109px;
+  }
 
   @media (min-width: @desktop-width) {
     background-color: inherit;
@@ -13,8 +15,8 @@
 
 .main-nav__toogle {
   position: absolute;
-  top: 20px;
-  right: 10px;
+  top: 25px;
+  right: 20px;
   z-index: 2;
   display: block;
   width: 50px;
@@ -22,6 +24,11 @@
   cursor: pointer;
   border: none;
   background-color: @verydarkdesaturatedblue;
+
+  @media (min-width: @tablet-width) {
+    top: 45px;
+    right: 20px;
+  }
 
   @media (min-width: @desktop-width) {
     display: none;
@@ -34,18 +41,18 @@
   top: 0;
   left: 0;
   width: 50px;
-  height: 2px;
+  height: 3px;
   background-color: @white;
   box-shadow:
-  0 8px 0 0 @white,
-  0 16px 0 0 @white;
+  0 9px 0 0 @white,
+  0 18px 0 0 @white;
 }
 
 .main-nav--closed .main-nav__toogle:hover::before {
   background-color: @strongpink;
   box-shadow:
-  0 8px 0 0 @strongpink,
-  0 16px 0 0 @strongpink;
+  0 9px 0 0 @strongpink,
+  0 18px 0 0 @strongpink;
 }
 
 .main-nav--closed .main-nav__toogle:focus::before,
@@ -56,8 +63,31 @@
   0 16px 0 0 fade(@strongpink, 30%);
 }
 
+.main-nav--closed .site-list__item {
+  display: none;
+
+  @media (min-width: @desktop-width) {
+    display: block;
+  }
+}
+
+@media (max-width: @mobile-width-only) {
+  .main-nav--nojs .main-nav__toggle {
+    display: none;
+  }
+
+  .main-nav--nojs .main-nav__wrapper {
+    position: static;
+    min-height: 0;
+  }
+
+  .main-nav--nojs .site-list__item {
+    display: block;
+  }
+}
+
 .main-nav--opened .main-nav__toogle {
-  top: 20px;
+  top: 25px;
   right: 10px;
 
   &::after,
@@ -91,6 +121,11 @@
   &:active::after {
     background-color: fade(@strongpink, 30%);
   }
+
+  @media (min-width: @tablet-width) {
+    top: 43px;
+    right: 10px;
+  }
 }
 
 .main-nav__list {
@@ -109,6 +144,39 @@
   }
 }
 
-.main-nav__list a {
+.site-list a {
+  position: relative;
+  display: block;
+  padding: 18px 21px;
+  padding-bottom: 13px;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 32px;
   color: @white;
+  text-transform: uppercase;
+  text-decoration: none;
+  text-align: center;
+  background-color: @verydarkdesaturatedblue;
+  box-shadow: 0px 1px 0px #000000, inset 0px 1px 0px rgba(255, 255, 255, 0.15);
+
+  @media (min-width: @desktop-width) {
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 18px;
+    text-transform: none;
+    background-color: inherit;
+    box-shadow: none;
+  }
+}
+
+.site-list:first-child {
+  margin-top: 70px;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 109px;
+  }
+
+  @media (min-width: @desktop-width) {
+   margin-top: 26px;
+  }
 }
