--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -23,6 +23,7 @@
 }
 
 .page-header__wrapper {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -32,8 +33,6 @@
   .page-header__wrapper {
     width: 620px;
     margin: 0 auto;
-    outline: 5px solid rgba(196, 236, 17, 0.904);
-    outline-offset: -5px;
   }
 }
 
@@ -50,6 +49,10 @@
 }
 
 .page-header__logo {
+  position: absolute;
+  top: 2px;
+  left: 0;
+  z-index: 1;
   height: 23px;
   padding-left: 20px;
   padding-top: 22px;
@@ -69,6 +72,8 @@
   }
 
   @media (min-width: @tablet-width) {
+    top: 3px;
+    left: 0;
     height: 40px;
     padding-top: 27px;
     padding-bottom: 43px;
@@ -79,6 +84,7 @@
   }
 
   @media (min-width: @desktop-width) {
+    position: static;
     height: 40px;
 
     .desktop-logo {
@@ -111,8 +117,6 @@
   background:
   url(../../img/gallery/header/mobile/screen.jpg) no-repeat 50% 122px,
   url(../../img/gallery/header/mobile/phone.png) no-repeat 50% 90px;
-  outline: 5px solid rgba(221, 208, 27, 0.932);
-  outline-offset: -5px;
 
   @media (min-width: @tablet-width) {
    height: 620px;
@@ -145,8 +149,6 @@
   .download-header__wrapper {
     width: 620px;
     margin: 0 auto;
-    outline: 3px solid rgba(64, 238, 29, 0.842);
-    outline-offset: -3px;
 
     .page-download {
       margin-top: 39px;
