--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,7 +1,6 @@
 .main-nav {
   position: relative;
   width: auto;
-  background-color: @verydarkdesaturatedblue;
   box-shadow: 0px 1px 0px #000000;
 
   @media (min-width: @tablet-width) {
@@ -68,6 +67,14 @@
 
   @media (min-width: @desktop-width) {
     display: block;
+  }
+}
+
+.main-nav--opened {
+  background-color: @verydarkdesaturatedblue;
+
+  @media (min-width: @desktop-width) {
+    background-color: fade(@black, 0%);
   }
 }
 
