--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,18 +1,18 @@
 .page-header {
-  background-image: url(../../img/gallery/header/mobile/back-mobile.jpg);
+  background-image: url(../img/gallery/header/mobile/back-mobile.jpg);
   background-repeat: no-repeat;
   background-position: 50% -35px;
   background-size: cover;
   color: @white;
 
   @media (min-width: @tablet-width) {
-    background-image: url(../../img/gallery/header/tablet/back-tablet.jpg);
+    background-image: url(../img/gallery/header/tablet/back-tablet.jpg);
     background-position: 50% -5px;
     background-size: cover;
   }
 
   @media (min-width: @desktop-width) {
-    background-image: url(../../img/gallery/header/desktop/back-desktop.jpg);
+    background-image: url(../img/gallery/header/desktop/back-desktop.jpg);
     background-position: 50% -5px;
     background-size: cover;
   }
@@ -115,21 +115,21 @@
 .header__download {
   color: @white;
   background:
-  url(../../img/gallery/header/mobile/screen.jpg) no-repeat 50% 122px,
-  url(../../img/gallery/header/mobile/phone.png) no-repeat 50% 90px;
+  url(../img/gallery/header/mobile/screen.jpg) no-repeat 50% 122px,
+  url(../img/gallery/header/mobile/phone.png) no-repeat 50% 90px;
 
   @media (min-width: @tablet-width) {
    height: 620px;
    background:
-   url(../../img/gallery/header/tablet/screen.jpg) no-repeat 82.8% 125px,
-   url(../../img/gallery/header/tablet/phone.png) no-repeat 50% 70px;
+   url(../img/gallery/header/tablet/screen.jpg) no-repeat 82.8% 125px,
+   url(../img/gallery/header/tablet/phone.png) no-repeat 50% 70px;
   }
 
   @media (min-width: @desktop-width) {
     height: 743px;
     background:
-    url(../../img/gallery/header/desktop/screen.jpg) no-repeat 77.2% 190px,
-    url(../../img/gallery/header/desktop/phone.png) no-repeat 20% 125px;
+    url(../img/gallery/header/desktop/screen.jpg) no-repeat 77.2% 190px,
+    url(../img/gallery/header/desktop/phone.png) no-repeat 20% 125px;
   }
 }
 
