Начинаю делать декоративные элементы страницы формы,исправляю ошибки

--- a/source/less/blocks/contest__forms.less
+++ b/source/less/blocks/contest__forms.less
@@ -225,7 +225,7 @@
   content: "";
   position: absolute;
   top: 6.5px;
-  left: -31.5px;
+  left: -32px;
   width: 15px;
   height: 15px;
   background-color: @strongpink;
@@ -521,7 +521,7 @@
   left: -30px;
   width: 22px;
   height: 16px;
-  background-image: url("../../img/forms/tick.png");
+  background-image: url("../img/forms/tick.png");
   background-repeat: no-repeat;
   background-position: 0 0;
 }
@@ -722,7 +722,7 @@
   margin: 0 auto;
 
   .button-form {
-    padding: 23px 44.3px;
+    padding: 12.5px 44.3px;
     background-color: @darkcyanlimegreen;
     border: 2px solid @darkcyanlimegreen;
     border-radius: 1px;
@@ -773,7 +773,7 @@
     margin-bottom: 50px;
 
     .button-form {
-      padding: 23px 54.3px;
+      padding: 12.5px 54.3px;
     }
   }
 }
