--- a/source/less/blocks/modal__despatch.less
+++ b/source/less/blocks/modal__despatch.less
@@ -41,5 +41,10 @@
 
   .button-despatch {
     padding: 12.5px 73.1px;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 30px;
+    color: @white;
+    background-color: @darkcyanlimegreen;
   }
 }
