--- a/source/less/blocks/modal__error.less
+++ b/source/less/blocks/modal__error.less
@@ -1,4 +1,6 @@
 .modal__error {
+  display: flex;
+  flex-direction: column;
   width: 460px;
   box-shadow: 0px 7px 15px rgba(0, 1, 1, 0.15);
   border-radius: 5px;
@@ -7,9 +9,9 @@
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column;
-    width: 296px;
+    width: 350px;
     margin: 0 auto;
-    outline: 3px solid rgba(0, 38, 255, 0.8);
+    outline: 3px solid rgba(72, 255, 0, 0.8);
     outline-offset: -3px;
   }
 
@@ -33,11 +35,41 @@
   }
 
   .modal__background-button-error {
+    display: flex;
+    width: 296px;
+    margin: 0 auto;
     padding-top: 40px;
     padding-bottom: 52px;
   }
 
   .button-error {
-    padding: 12.5px 133.5px;
+    padding: 12.5px 136px;
+    border: 2px solid #2AAB6D;
+    border-radius: 1px;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 30px;
+    color: @white;
+    background-color: @darkcyanlimegreen;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 780px;
+
+    .modal-error__wrapper {
+      width: 400px;
+    }
+
+    br {
+      content: "";
+    }
+
+    br:after {
+      content: "\00a0";
+    }
+
+    p {
+      text-align: initial;
+    }
   }
 }
