--- a/source/less/blocks/modal__despatch.less
+++ b/source/less/blocks/modal__despatch.less
@@ -1,5 +1,7 @@
 .modal__despatch {
+  display: none;
   width: 460px;
+  margin: 0 auto;
   box-shadow: 0px 7px 15px rgba(0, 1, 1, 0.15);
   border-radius: 5px;
 
@@ -7,14 +9,13 @@
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column;
-    width: 296px;
+    width: 310px;
     margin: 0 auto;
-    outline: 3px solid rgba(0, 38, 255, 0.8);
-    outline-offset: -3px;
   }
 
   h2 {
-    margin-bottom: 33px;
+    margin: 0;
+    margin-top: 40px;
     text-align: center;
     font-weight: bold;
     font-size: 30px;
@@ -23,7 +24,7 @@
 
   p {
     margin: 0;
-    margin-bottom: 35px;
+    margin-top: 30px;
     text-align: center;
     font-weight: normal;
     font-size: 18px;
@@ -31,20 +32,49 @@
     color: @verydarkdesaturatedblue;
   }
 
-  .modal__background-button {
-    width: 100%;
+  .button-despatch--wrapper {
+    background-color: @verylightgray;
+  }
+
+  .modal__background-button-despatch {
+    display: flex;
+    width: 296px;
+    margin: 0 auto;
+    margin-top: 23px;
     padding-top: 52px;
     padding-bottom: 52px;
-    background-color: @verylightgray;
     border-radius: 0px 0px 5px 5px;
   }
 
   .button-despatch {
-    padding: 12.5px 73.1px;
+    padding: 12.5px 85.5px;
+    border: 2px solid #2AAB6D;
+    border-radius: 1px;
     font-weight: bold;
     font-size: 18px;
     line-height: 30px;
+    text-align: center;
     color: @white;
     background-color: @darkcyanlimegreen;
+  }
+
+  @media (min-width: @tablet-width) {
+    display: block;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 780px;
+
+    .modal-despatch__wrapper {
+      width: 408px;
+    }
+
+    p {
+      margin-top: 25px;
+    }
+
+    .modal__background-button-despatch {
+      margin-top: 40px;
+    }
   }
 }
