--- a/source/less/blocks/modal__despatch.less
+++ b/source/less/blocks/modal__despatch.less
@@ -58,6 +58,17 @@
     background-color: @darkcyanlimegreen;
   }
 
+  .button-despatch:hover {
+    background-color: @limegreen;
+    border: 2px solid #1C9B5E;
+    border-radius: 1px;
+  }
+
+  .button-despatch:focus,
+  .button-despatch:active {
+    color: fade(@white, 30%);
+  }
+
   @media (min-width: @tablet-width) {
     display: block;
   }
