--- a/source/less/blocks/modal__error.less
+++ b/source/less/blocks/modal__error.less
@@ -51,6 +51,17 @@
     background-color: @darkcyanlimegreen;
   }
 
+  .button-error:hover {
+    background-color: @limegreen;
+    border: 2px solid #1C9B5E;
+    border-radius: 1px;
+  }
+
+  .button-error:focus,
+  .button-error:active {
+    color: fade(@white, 30%);
+  }
+
   @media (min-width: @tablet-width) {
     display: block;
   }
