--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -16,6 +16,11 @@
     text-decoration: none;
   }
 
+  .social__list{
+    display: flex;
+    justify-content: space-around;
+  }
+
   .page-footer__copyright {
     display: flex;
     width: 145px;
@@ -31,6 +36,57 @@
     font-size: 14px;
     line-height: 18px;
     color: @verydarkdesaturatedblue;
+  }
+
+  @media (min-width: @tablet-width) {
+    width: 620px;
+    flex-direction: row;
+    justify-content: space-between;
+
+    .page-footer__heading {
+      margin: 0;
+      margin-top: 36px;
+    }
+
+    .page-footer__social {
+      width: 220px;
+    }
+
+    .social__list {
+      margin-top: 50px;
+    }
+
+    .page-footer__copyright {
+      margin: 0;
+      margin-top: 40px;
+      margin-bottom: 45px;
+      margin-right: 10px;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 940px;
+
+    .page-footer__heading {
+      margin-top: 70px;
+      margin-bottom: 87px;
+      padding: 0;
+    }
+
+    .social__list {
+      margin-top: 80px;
+    }
+
+    .page-footer__copyright {
+      margin-top: 81px;
+      margin-bottom: 82px;
+      padding-top: 0;
+      padding-right: 10px;
+    }
+
+    .copyright__text {
+      font-size: 18px;
+    }
   }
 }
 
@@ -50,46 +106,4 @@
 .copyright__logo:focus path,
 .copyright__logo:active path {
   fill: rgba(40,54,69,30%);
-}
-
-@media (min-width: @tablet-width) {
-  .page-footer__wrapper {
-    width: 620px;
-    flex-direction: row;
-    justify-content: space-between;
-
-    .page-footer__heading {
-      margin: 0;
-      margin-top: 36px;
-    }
-
-    .page-footer__copyright {
-      margin: 0;
-      margin-top: 40px;
-      margin-right: 10px;
-    }
-  }
-}
-
-@media (min-width: @desktop-width) {
-  .page-footer__wrapper {
-    width: 940px;
-
-    .page-footer__heading {
-      margin-top: 70px;
-      margin-bottom: 87px;
-      padding: 0;
-    }
-
-    .page-footer__copyright {
-      margin-top: 81px;
-      margin-bottom: 82px;
-      padding-top: 0;
-      padding-right: 10px;
-    }
-
-    .copyright__text {
-      font-size: 18px;
-    }
-  }
 }
