--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -186,10 +186,8 @@
     text-align: center;
     color: @white;
   }
-}
 
-@media (min-width: @tablet-width) {
-  .title__wrapper {
+  @media (min-width: @tablet-width) {
     width: 300px;
     margin: 0;
     padding-top: 102px;
@@ -199,10 +197,8 @@
       font-size: 40px;
     }
   }
-}
 
-@media (min-width: @desktop-width) {
-  .title__wrapper {
+  @media (min-width: @desktop-width) {
     width: 300px;
     padding-top: 114px;
 
@@ -332,8 +328,6 @@
 // Catalog
 
 .photos__wrapper-title {
-  display: flex;
-  flex-wrap: wrap;
   width: 280px;
   margin: 0 auto;
   padding-top: 36px;
@@ -347,9 +341,7 @@
     line-height: 33px;
     text-align: center;
   }
-}
 
-.photos__wrapper-title {
   @media (min-width: @tablet-width) {
     width: 616px;
     padding-top: 81px;
@@ -367,6 +359,7 @@
     padding-bottom: 104px;
 
     .photos__title {
+      padding: 0 150px 0 150px;
       font-size: 50px;
       line-height: 68px;
     }
