--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -13,7 +13,7 @@
 
   @media (min-width: @desktop-width) {
     background-image: url(../img/gallery/header/desktop/back-desktop.jpg);
-    background-position: 50% -5px;
+    background-position: 50% 0;
     background-size: cover;
   }
 
@@ -27,24 +27,21 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-}
 
-@media (min-width: @tablet-width) {
-  .page-header__wrapper {
+  @media (min-width: @tablet-width) {
     width: 620px;
     margin: 0 auto;
   }
-}
 
-@media (min-width: @desktop-width) {
-  .page-header__wrapper {
+  @media (min-width: @desktop-width) {
     flex-direction: row;
     width: 940px;
     height: 110px;
-  }
+    margin: 0 auto;
 
-  .main-nav__toogle {
-    display: none;
+    .main-nav__toogle {
+      display: none;
+    }
   }
 }
 
