--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -60,8 +60,8 @@
   width: 280px;
   margin: 0 auto;
   background:
-  url(../img/gallery/page-main/proposal/mobile/iphonescreen.jpg) no-repeat 50% 550px,
-  url(../img/gallery/page-main/proposal/mobile/iphone.png) no-repeat 50% 515px;
+  url("../img/gallery/page-main/proposal/mobile/iphonescreen.jpg") no-repeat 50% 550px,
+  url("../img/gallery/page-main/proposal/mobile/iphone.png") no-repeat 50% 515px;
 
   .proposal__list {
     display: flex;
@@ -96,8 +96,8 @@
     width: 620px;
     grid-template-columns: 1fr 1fr;
     background:
-    url(../img/gallery/page-main/proposal/tablet/iphone-screen.jpg) no-repeat 5% 80px,
-    url(../img/gallery/page-main/proposal/tablet/iphone.png) no-repeat 1% 15px;
+    url("../img/gallery/page-main/proposal/tablet/iphone-screen.jpg") no-repeat 5% 80px,
+    url("../img/gallery/page-main/proposal/tablet/iphone.png") no-repeat 1% 15px;
 
     .proposal__list {
       grid-column-start: 2;
@@ -119,8 +119,8 @@
     width: 940px;
     grid-template-columns: 1fr;
     background:
-    url(../img/gallery/page-main/proposal/desktop/iphone-screen1.jpg) no-repeat 9% 45px,
-    url(../img/gallery/page-main/proposal/desktop/iphone1.png) no-repeat 8% 5px;
+    url("../img/gallery/page-main/proposal/desktop/iphone-screen1.jpg") no-repeat 9% 45px,
+    url("../img/gallery/page-main/proposal/desktop/iphone1.png") no-repeat 8% 5px;
 
     .proposal__list {
       grid-column-start: 1;
@@ -178,9 +178,9 @@
       width: 620px;
       margin: 0 auto;
       background:
-      url(../img/timer/24.png) no-repeat 13% 140px,
-      url(../img/timer/diagram-fill.png) no-repeat 4.6% 75px,
-      url(../img/timer/timer.png) no-repeat 0.5% 20px;
+      url("../img/timer/24.png") no-repeat 13% 140px,
+      url("../img/timer/diagram-fill.png") no-repeat 4.6% 75px,
+      url("../img/timer/timer.png") no-repeat 0.5% 20px;
     }
 
     .research-title__wrapper {
@@ -224,9 +224,9 @@
       grid-template-columns: 1fr max-content;
       width: 940px;
       background:
-      url(../img/timer-desktop/24.png) no-repeat 11% 180px,
-      url(../img/timer-desktop/diagram-fill.png) no-repeat 3.7% 100px,
-      url(../img/timer-desktop/timer.png) no-repeat 0.5% 30px;
+      url("../img/timer-desktop/24.png") no-repeat 11% 180px,
+      url("../img/timer-desktop/diagram-fill.png") no-repeat 3.7% 100px,
+      url("../img/timer-desktop/timer.png") no-repeat 0.5% 30px;
     }
 
     .research-title__wrapper {
