добавляю в галерею картинки

--- a/source/less/blocks/photos__gallery.less
+++ b/source/less/blocks/photos__gallery.less
@@ -51,8 +51,10 @@
 .photo-panorama__wrapper {
   display: flex;
   justify-content: flex-end;
-  width: 280px;
+  width: 320px;
   margin: 0 auto;
+  background-image: url("../img/gallery/mobile/panorama-mobile.jpg");
+  background-repeat: no-repeat;
 
   .photo__panorama {
     display: flex;
@@ -61,6 +63,8 @@
     width: 140px;
     background-color: @strongpink;
     color: @white;
+    margin-right: 20px;
+    margin-bottom: 100px;
   }
 
   .panorama__block {
