добавляю фото в каталог и в фильтр

--- a/source/less/blocks/photos-filters.less
+++ b/source/less/blocks/photos-filters.less
@@ -6,6 +6,10 @@
   width: 280px;
   margin: 0 auto;
 
+  .user__foto {
+    padding-top: 20px;
+  }
+
   .range__filter {
     margin-bottom: 38px;
     padding-top: 43px;
@@ -24,6 +28,7 @@
   }
 
   .post-it__user-foto {
+    padding-top: 37px;
     padding-bottom: 41px;
   }
 
@@ -37,6 +42,14 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
 
+    .user__foto {
+      padding-top: 57px;
+    }
+
+    .range__filter {
+      margin: 0;
+    }
+
     .svg-none {
       display: none;
     }
@@ -47,8 +60,8 @@
 
     .range__filter-wrapper {
       display: flex;
-      padding-top: 35px;
-      padding-bottom: 34px;
+      padding-top: 10px;
+      padding-bottom: 10px;
 
       .contrast {
         padding-left: 30px;
@@ -61,10 +74,8 @@
     }
 
     .post-it__user-foto {
-      grid-column-start: 2;
-      grid-column-end: 3;
       padding-top: 37px;
-      padding-bottom: 54px;
+      padding-bottom: 0;
     }
 
     .button-user {
