--- a/source/less/blocks/photos__gallery.less
+++ b/source/less/blocks/photos__gallery.less
@@ -51,20 +51,25 @@
 .photo-panorama__wrapper {
   display: flex;
   justify-content: flex-end;
-  width: 320px;
+  position: relative;
   margin: 0 auto;
-  background-image: url("../img/gallery/mobile/panorama-mobile.jpg");
-  background-repeat: no-repeat;
+  //background-image: url("../img/gallery/mobile/panorama-mobile.jpg");
+  //background-repeat: no-repeat;
+  /*@media (min-resolution: 2dppx) {
+    background-image: url("../img/gallery/mobile/panorama-mobile@2x.jpg");
+    background-size: 640px auto;
+  }*/
 
   .photo__panorama {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     width: 140px;
+    position: absolute;
+    top: 0;
+    right: 20px;
     background-color: @strongpink;
     color: @white;
-    margin-right: 20px;
-    margin-bottom: 100px;
   }
 
   .panorama__block {
@@ -75,15 +80,19 @@
     line-height: 24px;
     text-transform: uppercase;
   }
-}
 
-.photo-panorama__wrapper {
   @media (min-width: @tablet-width) {
-    width: 620px;
+
+    .photo__panorama {
+      top: 57px;
+    }
   }
 
   @media (min-width: @desktop-width) {
-    width: 940px;
+    .photo__panorama {
+      top: 54px;
+      right: 130px;
+    }
   }
 }
 
@@ -139,6 +148,7 @@
 @media (min-width: @tablet-width) {
   .big-photos__wrapper {
    width: 620px;
+   margin-bottom: 50px;
 
    .photos__comment {
      display: grid;
